--- a/requirements.in
+++ b/requirements.in
@@ -46,3 +46,5 @@ beartype>=0.18      # compatible typechecker to use with jaxtyping
 # do not use 2.2 because https://github.com/pytorch/pytorch/issues/122385
 torch~=2.3.1
 transformers~=4.44  # for esm inference
+
+boto3
